--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "lint:check": "eslint .",
         "lint:fix": "eslint --fix .",
         "commitlint": "commitlint --edit",
-        "commit": "commit"
+        "commit": "commit",
+        "tsc": "tsc -p tsconfig.json"
     },
     "repository": {
         "type": "git",
@@ -29,12 +30,15 @@
         "@commitlint/config-angular": "^17.7.0",
         "@commitlint/config-conventional": "^17.7.0",
         "@commitlint/prompt-cli": "^17.7.1",
+        "@types/jest": "^29.5.8",
         "eslint": "^8.49.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-import": "^2.28.1",
         "husky": "^8.0.3",
         "jest": "^29.7.0",
-        "prettier": "^3.0.3"
+        "prettier": "^3.0.3",
+        "ts-jest": "^29.1.1",
+        "typescript": "^5.2.2"
     }
 }
